# api_final_yatube

./: Makefile  Makefile.txt  README.md  pyproject.toml  setup.cfg
yatube_api/: manage.py
yatube_api/api/: permissions.py  serializers.py  urls.py  views.py
yatube_api/posts/: models.py
yatube_api/posts/migrations/: 0002_auto_20221223_0145.py  0003_auto_20221223_0250.py  0004_remove_follow_unique_following.py  0005_follow_unique_following.py  0006_alter_follow_following.py
yatube_api/yatube_api/: settings.py
